--- a/details_fellowship_of_the_ring.html
+++ b/details_fellowship_of_the_ring.html
@@ -19,7 +19,7 @@
                 <img class="imagesD" src="assets/img/The_Lord_of_the_Rings_The_Fellowship_of_the_Ring.jpg" alt="The fellowship of the Rings poster">
             </div>
             <div class="col-9 ps-5">
-                <h2>Logan</h2>
+                <h2>Senhor dos Aneis: A Sociedade do Anel</h2>
                 <ul>
                     <li>Lançamento: 2001</li>
                     <li>Duração: 2h 58m</li>
@@ -60,4 +60,5 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
     crossorigin="anonymous"></script>
 </body>
+
 </html>
